[package]
name = "my-rustengan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
threadpool = "1.8.1"
time = "0.3.20"
